// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one 1`] = `
<View
  style={
    Object {
      "height": 75,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "marginLeft": "4%",
        "marginRight": "3%",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/dot.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 27.5,
          "borderWidth": 0.8,
          "height": 55,
          "overflow": "hidden",
          "width": 55,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "marginLeft": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 25,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Bold",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            address#1
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                },
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            NaN/NaN/Nundefined
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 23,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Test
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#C4C4C4",
                "borderRadius": 20,
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                  },
                ]
              }
            >
              10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test three 1`] = `
<View
  style={
    Object {
      "height": 75,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "marginLeft": "4%",
        "marginRight": "3%",
      }
    }
  >
    <Image
      height={55}
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Object {
          "borderRadius": 30,
          "height": 55,
          "width": 55,
        }
      }
      width={55}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "marginLeft": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 25,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Bold",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            user
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                },
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            NaN/NaN/Nundefined
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 23,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Test3
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#C4C4C4",
                "borderRadius": 20,
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                  },
                ]
              }
            >
              10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Test two 1`] = `
<View
  style={
    Object {
      "height": 75,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "marginLeft": "4%",
        "marginRight": "3%",
      }
    }
  >
    <Image
      height={55}
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Object {
          "borderRadius": 30,
          "height": 55,
          "width": 55,
        }
      }
      width={55}
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "marginLeft": 10,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 25,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 10,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Bold",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            user
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                },
                Object {
                  "textAlign": "center",
                },
              ]
            }
          >
            NaN/NaN/Nundefined
          </Text>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "height": 23,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 10,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#888888",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "textAlign": "left",
                },
              ]
            }
          >
            Test2
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 2,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#C4C4C4",
                "borderRadius": 20,
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <View />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
